# dana-os

./: .env.example  .gitignore  .pre-commit-config.yaml  DANA_OS_TRACKER.md  README.md  docker-compose.yml
.github/workflows/: backend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json
backend/app/: __init__.py  config.py  db.py  dependencies.py  errors.py  main.py  utils.py
backend/app/models/: __init__.py  climbing.py  enums.py  goal.py  habit.py  nudge.py  vocal.py
backend/app/routers/: climbing.py  goals.py  habits.py  nudges.py  vocal.py
backend/app/schemas/: climbing.py  goal.py  habit.py  nudge.py  vocal.py
backend/app/services/: habit_calc.py  nudges.py  sheets_sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_habits_goals.py  0003_vocal_lessons.py  0004_climbing.py
backend/scripts/: backfill_habits_from_sheet.py  onboard_climbing_from_sheet.py
backend/sql/: init.sql
backend/tests/: conftest.py  test_climbing.py  test_db_bootstrap.py  test_goals.py  test_habits.py  test_health.py  test_nudges.py  test_sheets_sync.py  test_vocal.py
docs/: dana-os-spec-v1.3.docx
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  router.tsx
frontend/src/commands/: CommandPalette.test.tsx  CommandPalette.tsx  navigation.ts
frontend/src/lib/: api.ts  climbing-api.ts  config-api.ts  dateUtils.test.ts  dateUtils.ts  goals-api.ts  habits-api.ts  nudges-api.ts  useUserSetting.ts  utils.ts  vocal-api.ts
frontend/src/pages/: CalendarPage.tsx  ClimbingPage.tsx  CorrelationsPage.tsx  DigestPage.tsx  EntertainmentPage.tsx  HabitsPage.test.tsx  HabitsPage.tsx  HealthPage.tsx  HomePage.test.tsx  HomePage.tsx  ModulesPage.tsx  MoodPage.tsx  NetWorthPage.tsx  QueryPage.tsx  (+4 more)
infra/: com.danaos.backup.plist
scripts/: backup.sh  import_vocal_lessons.py
(+50 files in other folders)
